# OxIde

./: .agent-mail.yaml  .gitignore  AGENTS.md  ARCHITECTURE.md  CHARTER.md  Cargo.toml  OPERATIONS.md  PRODUCT_DIRECTION.md  README.md  UX_BRAINSTORM.md  VISION.md
.beads/: config.yaml  issues.jsonl
.beads/.br_history/: issues.20260401_220754_332595200.jsonl  issues.20260401_221805_238687100.jsonl  issues.20260401_223329_515933700.jsonl  issues.20260401_223854_015145300.jsonl  issues.20260401_224753_721250600.jsonl  issues.20260401_225754_095790900.jsonl  issues.20260401_225804_413874300.jsonl  issues.20260401_230049_964772900.jsonl  issues.20260402_090548_587808400.jsonl  issues.20260402_090608_540427000.jsonl  issues.20260402_090624_355126100.jsonl  issues.20260402_093654_770094300.jsonl  issues.20260402_093707_048424400.jsonl  issues.20260402_093851_567712500.jsonl  issues.20260402_094631_300923500.jsonl  issues.20260402_094638_803402300.jsonl  issues.20260402_094800_178378700.jsonl  issues.20260402_095757_268764800.jsonl  issues.20260402_095805_539523900.jsonl  issues.20260402_095859_407685400.jsonl  issues.20260402_100846_209871600.jsonl  issues.20260402_100853_654670000.jsonl  issues.20260402_100958_925491600.jsonl  issues.20260402_204315_537812200.jsonl  issues.20260402_204339_663732200.jsonl  issues.20260402_204808_587987700.jsonl  issues.20260402_205412_776395600.jsonl  issues.20260402_205419_133370400.jsonl  issues.20260402_205452_831331600.jsonl  issues.20260402_205634_981468200.jsonl  (+35 more)
.wtd/: oxide-audit-lab-first-class.yaml  oxide-audit-lab-studio.yaml  oxide-backfill.yaml  oxide-firehorse-command.yaml  oxide-firehorse-console.yaml  oxide-firehorse-debug.yaml  oxide-firehorse-editing.yaml  oxide-firehorse-focus.yaml  oxide-firehorse-launchpad.yaml  oxide-firehorse-real-editing.yaml  oxide-firehorse-run.yaml  oxide-smoke.yaml  oxide-uxlab-smoke.yaml
apps/: README.md
apps/dna-oxide/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/dna-oxide/src-tauri/capabilities/: README.md  default.json
apps/dna-oxide/src-tauri/icons/: README.md
apps/dna-oxide/src-tauri/src/: commands.rs  main.rs  services.rs
crates/: Cargo.toml  README.md
crates/oxide-guilab/: Cargo.toml
crates/oxide-guilab/src/: lib.rs  main.rs
crates/oxide-oxvba/: Cargo.toml
crates/oxide-oxvba/src/: lib.rs
docs/: BEADS.md  DESIGN_MOCKUP_WEB.md  DESIGN_TUI.md  DESIGN_TUI_2026_FIRE_HORSE.md  DNAONECALC_SHARED_UI_REUSE_PROOF.md  DNAOXIDE_APP_INSTRUMENTATION.md  DNAOXIDE_COMMAND_BOUNDARY.md  DNAOXIDE_COMPILE_BUILD_ADAPTER_PROFILE_MAP.md  DNAOXIDE_COMPILE_REFERENCE_PANEL_CONTRACT.md  DNAOXIDE_DESKTOP_HOST_COMMAND_SPINE.md  DNAOXIDE_EDITABLE_SOURCE_BOUNDARY.md  DNAOXIDE_HOST_UI_PROOF_MODE.md  DNAOXIDE_INTERACTION_HARNESS.md  DNAOXIDE_LIVE_EDITABLE_PROOF_MODE.md  DNAOXIDE_LIVE_EDIT_FEEDBACK_LOOP.md  DNAOXIDE_LIVE_HOST_MOUNT.md  DNAOXIDE_OXVBA_INTEGRATION_READINESS.md  DNAOXIDE_SAVE_RELOAD_BOUNDARY.md  DNAOXIDE_TAURI_WEBVIEW_AUTOMATION_PLAN.md  DNA_CALC_HOST_INTEGRATION.md  DNA_OXIDE_HOST_PLAN.md  EDITOR_SUBSTRATE_RESEARCH.md  GUI_DIRECTION.md  GUI_FIXTURES_AND_LAB.md  GUI_PIVOT_CODEBASE_REVIEW.md  GUI_PIVOT_FIRST_PASS_PLAN.md  GUI_TEST_STRATEGY.md  GUI_WORKSPACE_LAYOUT.md  HANDOFF_DNAONECALC_EMBEDDING_CONTRACT.md  HANDOFF_DNAONECALC_WEB_SHELL_HOST_API.md  HANDOFF_DNAOXIDE_OXVBA_FEEDBACK_ALIGNMENT.md  HANDOFF_DNAOXIDE_OXVBA_REQUIREMENTS.md  HANDOFF_DNA_CALC_GUI_PIVOT_COORDINATION.md  HANDOFF_GUI_WORKSET_ROLLOUT.md  HANDOFF_OXVBA_NATIVE_COM_CAPABILITY.md  HANDOFF_OXVBA_RUNTIME_DEBUG_IMMEDIATE_INTERFACES.md  HANDOFF_W220_EDITABLE_MODULE_DIAGNOSTICS.md  HANDOFF_W230_SAVE_RELOAD_SESSION_RESTORE.md  HANDOFF_W240_CAPABILITY_AWARE_RUN_OUTPUT.md  HANDOFF_W250_DNAONECALC_EMBEDDING_PROOF.md  (+28 more)
src/: lib.rs  main.rs  vt.rs
tests/: wtd_smoke.rs
tools/: verify-dnaonecalc-profile.mjs  verify-dnaonecalc-reuse.mjs
(+316 files in other folders)
