[package]
name = "ox-ide"
version = "0.1.0"
edition = "2024"
description = "Console micro-IDE companion for OxVba"
publish = false

[dependencies]
ftui = { version = "0.2.1", default-features = false, features = ["crossterm"] }
oxvba-languageservice = { path = ".external/oxvba-frozen/crates/oxvba-languageservice" }
oxvba-project = { path = ".external/oxvba-frozen/crates/oxvba-project" }
oxvba-web-host = { path = ".external/oxvba-frozen/crates/oxvba-web-host" }
oxvba-web-shell = { path = ".external/oxvba-frozen/crates/oxvba-web-shell" }

[dev-dependencies]
oxvba-com = { path = ".external/oxvba-frozen/crates/oxvba-com", features = ["fixture-typelibs"] }
