[package]
name = "ox-ide"
version = "0.1.0"
edition = "2024"
description = "Console micro-IDE companion for OxVba"
publish = false

[dependencies]
ftui = { version = "0.2.1", default-features = false, features = ["crossterm"] }
oxvba-languageservice = { path = ".external/oxvba-frozen/crates/oxvba-languageservice" }
oxvba-project = { path = ".external/oxvba-frozen/crates/oxvba-project" }
oxvba-web-host = { path = ".external/oxvba-frozen/crates/oxvba-web-host" }
oxvba-web-shell = { path = ".external/oxvba-frozen/crates/oxvba-web-shell" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
oxvba-com = { path = ".external/oxvba-frozen/crates/oxvba-com", features = ["fixture-typelibs"] }

[features]
# Gates the WinTermDriver-backed visual regression suite (W037).
# Requires `wtd` on PATH and a running `wtd-host`. See docs/TESTING_WTD.md.
wtd = []

[[test]]
name = "wtd_smoke"
path = "tests/wtd_smoke.rs"
required-features = ["wtd"]
