[package]
name = "oxide-guilab"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
oxide-bridge = { path = "../oxide-bridge" }
oxide-core = { path = "../oxide-core" }
oxide-domain = { path = "../oxide-domain" }
oxide-editor-core = { path = "../oxide-editor-core" }
oxide-oxvba = { path = "../oxide-oxvba" }
